Se creó con Colab

--- a/CS224W_Colab_1_2022_23.ipynb
+++ b/CS224W_Colab_1_2022_23.ipynb
@@ -111,11 +111,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "VIETqEfrfy5Y",
-        "outputId": "b83c77c8-8d8b-4169-de65-107b53306100",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 186
-        }
+        },
+        "outputId": "b83c77c8-8d8b-4169-de65-107b53306100"
       },
       "source": [
         "G = nx.karate_club_graph()\n",
@@ -655,7 +655,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c4d9ffe-10ed-4563-92fa-2ab67037abc2"
+        "outputId": "bfd280ff-f4b8-4265-dbed-12b2fe05aadf"
       },
       "source": [
         "def closeness_centrality(G, node=5):\n",
@@ -664,13 +664,15 @@
         "  # network and node is the node id in the graph. Please round the\n",
         "  # closeness centrality result to 2 decimal places.\n",
         "\n",
-        "  closeness = 0\n",
+        "\n",
         "\n",
         "  ## Note:\n",
         "  ## 1: You can use networkx closeness centrality function.\n",
         "  ## 2: Notice that networkx closeness centrality returns the normalized\n",
         "  ## closeness directly, which is different from the raw (unnormalized)\n",
         "  ## one that we learned in the lecture.\n",
+        "\n",
+        "  closeness = nx.closeness_centrality(G, u=node)\n",
         "\n",
         "  #########################################\n",
         "\n",
@@ -680,13 +682,13 @@
         "closeness = closeness_centrality(G, node=node)\n",
         "print(\"The node 5 has closeness centrality {}\".format(closeness))"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The node 5 has closeness centrality 0\n"
+            "The node 5 has closeness centrality 0.38372093023255816\n"
           ]
         }
       ]
@@ -1241,11 +1243,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "RDeQTNNxqH0j",
-        "outputId": "a3b25ec7-9242-4cb8-b6c4-2bc410684f1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 211
-        }
+        },
+        "outputId": "a3b25ec7-9242-4cb8-b6c4-2bc410684f1f"
       },
       "source": [
         "from torch.optim import SGD\n",
