Se creó con Colab

--- a/CS224W_Colab_1_2022_23.ipynb
+++ b/CS224W_Colab_1_2022_23.ipynb
@@ -720,19 +720,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5854be5f-c049-4169-fb45-cc240e8738ae"
+        "outputId": "a9e473de-f0cb-48fd-96be-7d46ece4d947"
       },
       "source": [
         "import torch\n",
         "print(torch.__version__)"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2.0.1+cu118\n"
+            "2.2.1+cu121\n"
           ]
         }
       ]
@@ -755,7 +755,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "068b3365-0d68-4f33-ae19-31e7864603f9"
+        "outputId": "4715eb51-c66a-4066-ccbb-011912fb6aec"
       },
       "source": [
         "# Generate 3 x 4 tensor with all ones\n",
@@ -773,7 +773,7 @@
         "# Get the shape of the tensor\n",
         "print(ones.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -785,9 +785,9 @@
             "tensor([[0., 0., 0., 0.],\n",
             "        [0., 0., 0., 0.],\n",
             "        [0., 0., 0., 0.]])\n",
-            "tensor([[0.8875, 0.7592, 0.7450, 0.7751],\n",
-            "        [0.2634, 0.8711, 0.6724, 0.6979],\n",
-            "        [0.8270, 0.4263, 0.6097, 0.0337]])\n",
+            "tensor([[0.4677, 0.5218, 0.8721, 0.9888],\n",
+            "        [0.5375, 0.4288, 0.6120, 0.5621],\n",
+            "        [0.9678, 0.1501, 0.2332, 0.8240]])\n",
             "torch.Size([3, 4])\n"
           ]
         }
@@ -809,7 +809,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3f27dee5-3e8f-4ae7-e844-2c1ce266a067"
+        "outputId": "b9a676db-00aa-4349-dd01-c8ecb3582e7a"
       },
       "source": [
         "# Create a 3 x 4 tensor with all 32-bit floating point zeros\n",
@@ -820,7 +820,7 @@
         "zeros = zeros.type(torch.long)\n",
         "print(zeros.dtype)"
       ],
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -844,11 +844,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kEtVxMFID3ZT",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "906df88b-cc12-4ff3-d8ac-268bd09fb02d"
+        "id": "kEtVxMFID3ZT"
       },
       "source": [
         "def graph_to_edge_list(G):\n",
@@ -857,9 +853,10 @@
         "  # where each tuple is a tuple representing an edge connected\n",
         "  # by two nodes.\n",
         "\n",
-        "  edge_list = []\n",
         "\n",
         "  ############# Your code here ############\n",
+        "\n",
+        "  edge_list = list(G.edges)\n",
         "\n",
         "  #########################################\n",
         "\n",
@@ -870,9 +867,10 @@
         "  # tensor. The input edge_list is a list of tuples and the resulting\n",
         "  # tensor should have the shape [2, len(edge_list)].\n",
         "\n",
-        "  edge_index = torch.tensor([])\n",
         "\n",
         "  ############# Your code here ############\n",
+        "\n",
+        "  edge_index = torch.tensor(edge_list).T\n",
         "\n",
         "  #########################################\n",
         "\n",
@@ -884,16 +882,7 @@
         "print(\"The pos_edge_index tensor has sum value {}\".format(torch.sum(pos_edge_index)))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The pos_edge_index tensor has shape torch.Size([0])\n",
-            "The pos_edge_index tensor has sum value 0.0\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
