Se creó con Colab

--- a/CS224W_Colab_1_2022_23.ipynb
+++ b/CS224W_Colab_1_2022_23.ipynb
@@ -899,12 +899,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "G.number_of_nodes()"
+      ],
+      "metadata": {
+        "id": "h4YRp52QIurT",
+        "outputId": "9b1e1074-3f34-427c-e472-7fdf0dde53cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "34"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "9N8VT1f8-IJ8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fbcb187a-b866-4f3a-cff8-33ba22ef3616"
+        "outputId": "697a0e07-1656-4c6a-f701-5c3105199910"
       },
       "source": [
         "import random\n",
@@ -919,9 +945,28 @@
         "  # the karate club network is an undirected graph, if (0, 1) is a positive\n",
         "  # edge, do you think (1, 0) can be a negative one?\n",
         "\n",
-        "  neg_edge_list = []\n",
         "\n",
         "  ############# Your code here ############\n",
+        "\n",
+        "  neg_edge_list = []\n",
+        "\n",
+        "  max_index = G.number_of_nodes()\n",
+        "\n",
+        "  edges_ingraph = G.edges\n",
+        "\n",
+        "  n_sampled = 0\n",
+        "\n",
+        "  while n_sampled < num_neg_samples:\n",
+        "\n",
+        "    sample = (random.randint(0,max_index), random.randint(0,max_index))\n",
+        "\n",
+        "    if sample in edges_ingraph:\n",
+        "      pass\n",
+        "\n",
+        "    elif (sample not in edges_ingraph) and (sample[0] != sample[1]):\n",
+        "      n_sampled += 1\n",
+        "      neg_edge_list.append(sample)\n",
+        "\n",
         "\n",
         "  #########################################\n",
         "\n",
@@ -945,16 +990,36 @@
         "## Note:\n",
         "## 1: For each of the 5 edges, print whether it can be negative edge\n",
         "\n",
+        "ll = [edge_1, edge_2, edge_3, edge_5, edge_5]\n",
+        "\n",
+        "[print(f\"{i} Not a negative edge\") if i in G.edges else print(f\"{i} is a negative edge\") for i in ll]\n",
+        "\n",
+        "\n",
         "#########################################"
       ],
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The neg_edge_index tensor has shape torch.Size([0])\n"
+            "The neg_edge_index tensor has shape torch.Size([2, 78])\n",
+            "(7, 1) Not a negative edge\n",
+            "(1, 33) is a negative edge\n",
+            "(33, 22) Not a negative edge\n",
+            "(4, 2) is a negative edge\n",
+            "(4, 2) is a negative edge\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[None, None, None, None, None]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
         }
       ]
     },
