Se creó con Colab

--- a/CS224W_Colab2.ipynb
+++ b/CS224W_Colab2.ipynb
@@ -206,19 +206,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8iF_Kyqr_JbY"
+        "id": "8iF_Kyqr_JbY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c3ecd587-2944-458b-deb7-261f053c7b27"
       },
       "source": [
         "def get_num_classes(pyg_dataset):\n",
         "  # TODO: Implement a function that takes a PyG dataset object\n",
         "  # and returns the number of classes for that dataset.\n",
         "\n",
-        "  num_classes = 0\n",
+        "  num_classes = pyg_dataset.num_classes\n",
         "\n",
         "  ############# Your code here ############\n",
         "  ## (~1 line of code)\n",
         "  ## Note\n",
         "  ## 1. Colab autocomplete functionality might be useful.\n",
+        "\n",
         "\n",
         "  #########################################\n",
         "\n",
@@ -228,7 +233,7 @@
         "  # TODO: Implement a function that takes a PyG dataset object\n",
         "  # and returns the number of features for that dataset.\n",
         "\n",
-        "  num_features = 0\n",
+        "  num_features = pyg_dataset.num_features\n",
         "\n",
         "  ############# Your code here ############\n",
         "  ## (~1 line of code)\n",
@@ -245,8 +250,17 @@
         "  print(\"{} dataset has {} classes\".format(name, num_classes))\n",
         "  print(\"{} dataset has {} features\".format(name, num_features))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ENZYMES dataset has 6 classes\n",
+            "ENZYMES dataset has 3 features\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -273,7 +287,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LIis9oTZAfs3"
+        "id": "LIis9oTZAfs3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "05fda181-deab-459b-83a0-8a3ab3a3395f"
       },
       "source": [
         "def get_graph_class(pyg_dataset, idx):\n",
@@ -281,10 +299,11 @@
         "  # an index of a graph within the dataset, and returns the class/label\n",
         "  # of the graph (as an integer).\n",
         "\n",
-        "  label = -1\n",
-        "\n",
         "  ############# Your code here ############\n",
         "  ## (~1 line of code)\n",
+        "\n",
+        "  G = pyg_dataset[idx]\n",
+        "  label = int(G.y)\n",
         "\n",
         "  #########################################\n",
         "\n",
@@ -298,8 +317,17 @@
         "  label = get_graph_class(pyg_dataset, idx)\n",
         "  print('Graph with index {} has label {}'.format(idx, label))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Data(edge_index=[2, 168], x=[37, 3], y=[1])\n",
+            "Graph with index 100 has label 4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -313,7 +341,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f5m2DOfhBtWv"
+        "id": "f5m2DOfhBtWv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "26b5b256-d820-4e54-c84b-e13dd47f6f4c"
       },
       "source": [
         "def get_graph_num_edges(pyg_dataset, idx):\n",
@@ -324,7 +356,6 @@
         "  # graph G, if two nodes v and u are connected by an edge, this edge\n",
         "  # should only be counted once.\n",
         "\n",
-        "  num_edges = 0\n",
         "\n",
         "  ############# Your code here ############\n",
         "  ## Note:\n",
@@ -332,6 +363,10 @@
         "  ## 2. We assume the graph is undirected\n",
         "  ## 3. Look at the PyG dataset built in functions\n",
         "  ## (~4 lines of code)\n",
+        "\n",
+        "  G = pyg_dataset[idx]\n",
+        "\n",
+        "  num_edges = G.num_edges\n",
         "\n",
         "  #########################################\n",
         "\n",
@@ -342,8 +377,16 @@
         "  num_edges = get_graph_num_edges(pyg_dataset, idx)\n",
         "  print('Graph with index {} has {} edges'.format(idx, num_edges))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Graph with index 200 has 106 edges\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
