Se creó con Colab

--- a/CS224W_Colab2.ipynb
+++ b/CS224W_Colab2.ipynb
@@ -413,7 +413,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gpc6bTm3GF02"
+        "id": "Gpc6bTm3GF02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f03f9dfb-3bce-4b29-d5cd-276ee447150a"
       },
       "source": [
         "import torch_geometric.transforms as T\n",
@@ -430,8 +434,90 @@
         "  data = dataset[0]\n",
         "  print(data)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading http://snap.stanford.edu/ogb/data/nodeproppred/arxiv.zip\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Downloaded 0.08 GB: 100%|██████████| 81/81 [00:01<00:00, 80.80it/s] \n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting dataset/arxiv.zip\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Processing...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Loading necessary files...\n",
+            "This might take a while.\n",
+            "Processing graphs...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 1/1 [00:00<00:00, 1789.38it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Converting graphs into PyG objects...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 1/1 [00:00<00:00, 3653.57it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n",
+            "Done!\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The ogbn-arxiv dataset has 1 graph\n",
+            "Data(num_nodes=169343, x=[169343, 128], node_year=[169343, 1], y=[169343, 1], adj_t=[169343, 169343, nnz=1166243])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -445,18 +531,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZP844_nT2ZJl"
+        "id": "ZP844_nT2ZJl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "801f18c2-fe66-4447-c6bc-c9e6070eba80"
       },
       "source": [
         "def graph_num_features(data):\n",
         "  # TODO: Implement a function that takes a PyG data object,\n",
         "  # and returns the number of features in the graph (as an integer).\n",
         "\n",
-        "  num_features = 0\n",
+        "\n",
         "\n",
         "  ############# Your code here ############\n",
         "  ## (~1 line of code)\n",
-        "\n",
+        "  num_features = data.num_features\n",
         "  #########################################\n",
         "\n",
         "  return num_features\n",
@@ -465,8 +555,16 @@
         "  num_features = graph_num_features(data)\n",
         "  print('The graph has {} features'.format(num_features))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The graph has 128 features\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
