Se creó con Colab

--- a/CS224W_Colab2.ipynb
+++ b/CS224W_Colab2.ipynb
@@ -699,13 +699,22 @@
         "        super(GCN, self).__init__()\n",
         "\n",
         "        # A list of GCNConv layers\n",
-        "        self.convs = torch.nn.ModuleList([GCNConv(input_dim, hidden_dim) for i in range(num_layers)])\n",
+        "        self.convs = torch.nn.ModuleList()\n",
         "\n",
         "        # A list of 1D batch normalization layers\n",
-        "        self.bns = torch.nn.ModuleList([nn.BatchNorm1d(input_dim) for i in range(num_layers-1)])\n",
+        "        self.bns = torch.nn.ModuleList()\n",
+        "\n",
+        "        for i in range(num_layers):\n",
+        "          in_channels = input_dim if i == 0 else hidden_dim\n",
+        "          out_channels = output_dim if i == num_layers - 1 else hidden_dim\n",
+        "          self.convs.append(GCNConv(in_channels, out_channels))\n",
+        "\n",
+        "          if i < num_layers - 1:\n",
+        "            self.bns.append(torch.nn.BatchNorm1d(out_channels))\n",
+        "\n",
         "\n",
         "        # The log softmax layer\n",
-        "        self.softmax = nn.LogSoftmax()\n",
+        "        self.softmax = torch.nn.LogSoftmax(dim=1)\n",
         "\n",
         "        ############# Your code here ############\n",
         "        ## Note:\n",
@@ -753,10 +762,16 @@
         "        ## 4. If return_embeds is True, then skip the last softmax layer\n",
         "        ## (~7 lines of code)\n",
         "\n",
-        "        x = self.convs(x)\n",
-        "        x = self.bns(x)\n",
-        "        x = nn.functional.relu(x)\n",
-        "        x = F.dropout(x, p=self.dropout, training=True)\n",
+        "        for i, conv in enumerate(self.convs):\n",
+        "          x = conv(x, adj_t)\n",
+        "\n",
+        "          if i < len(self.bns):\n",
+        "                x = self.bns[i](x)\n",
+        "                x = torch.nn.functional.relu(x)\n",
+        "\n",
+        "          if i < len(self.convs) - 1:\n",
+        "                x = torch.nn.functional.dropout(x, p=self.dropout, training=self.training)\n",
+        "\n",
         "\n",
         "        if self.return_embeds:\n",
         "\n",
@@ -770,7 +785,7 @@
         "\n",
         "        return out"
       ],
-      "execution_count": 85,
+      "execution_count": 150,
       "outputs": []
     },
     {
@@ -793,6 +808,15 @@
         "    ## 4. Feed the sliced output and label to loss_fn\n",
         "    ## (~4 lines of code)\n",
         "\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    output = model(data.x, data.adj_t)\n",
+        "\n",
+        "    output_train = output[train_idx]\n",
+        "    labels_train = data.y[train_idx].view(-1)\n",
+        "\n",
+        "    loss = loss_fn(output_train, labels_train)\n",
+        "\n",
         "    #########################################\n",
         "\n",
         "    loss.backward()\n",
@@ -800,7 +824,7 @@
         "\n",
         "    return loss.item()"
       ],
-      "execution_count": null,
+      "execution_count": 171,
       "outputs": []
     },
     {
@@ -817,12 +841,14 @@
         "    model.eval()\n",
         "\n",
         "    # The output of model on all data\n",
-        "    out = None\n",
+        "\n",
         "\n",
         "    ############# Your code here ############\n",
         "    ## (~1 line of code)\n",
         "    ## Note:\n",
         "    ## 1. No index slicing here\n",
+        "\n",
+        "    out = model(data.x, data.adj_t)\n",
         "\n",
         "    #########################################\n",
         "\n",
@@ -854,7 +880,7 @@
         "\n",
         "    return train_acc, valid_acc, test_acc"
       ],
-      "execution_count": null,
+      "execution_count": 172,
       "outputs": []
     },
     {
@@ -875,7 +901,7 @@
         "  }\n",
         "  args"
       ],
-      "execution_count": null,
+      "execution_count": 173,
       "outputs": []
     },
     {
@@ -890,7 +916,7 @@
         "              args['dropout']).to(device)\n",
         "  evaluator = Evaluator(name='ogbn-arxiv')"
       ],
-      "execution_count": null,
+      "execution_count": 174,
       "outputs": []
     },
     {
@@ -942,7 +968,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EqcextqOL2FX"
+        "id": "EqcextqOL2FX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dfd991eb-47d1-4326-f09d-015b5175f4f7"
       },
       "source": [
         "if 'IS_GRADESCOPE_ENV' not in os.environ:\n",
@@ -953,8 +983,17 @@
         "        f'Valid: {100 * valid_acc:.2f}% '\n",
         "        f'Test: {100 * test_acc:.2f}%')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 176,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving Model Predictions\n",
+            "Best model: Train: 73.86%, Valid: 72.11% Test: 71.53%\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
