--- a/CS224W_Colab3_2023.ipynb
+++ b/CS224W_Colab3_2023.ipynb
@@ -82,11 +82,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "J_m9l6OYCQZP",
-        "outputId": "eef1eb55-72c4-48a8-cb47-83fedc4f2e3c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "J_m9l6OYCQZP"
       },
       "source": [
         "# Install torch geometric\n",
@@ -101,90 +97,20 @@
         "  !pip install torch-geometric\n",
         "  !pip install -q git+https://github.com/snap-stanford/deepsnap.git"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in links: https://pytorch-geometric.com/whl/torch-2.2.1+cu121.html\n",
-            "Collecting torch-scatter\n",
-            "  Downloading https://data.pyg.org/whl/torch-2.2.0%2Bcu121/torch_scatter-2.1.2%2Bpt22cu121-cp310-cp310-linux_x86_64.whl (10.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.9/10.9 MB\u001b[0m \u001b[31m46.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: torch-scatter\n",
-            "Successfully installed torch-scatter-2.1.2+pt22cu121\n",
-            "Looking in links: https://pytorch-geometric.com/whl/torch-2.2.1+cu121.html\n",
-            "Collecting torch-sparse\n",
-            "  Downloading https://data.pyg.org/whl/torch-2.2.0%2Bcu121/torch_sparse-0.6.18%2Bpt22cu121-cp310-cp310-linux_x86_64.whl (5.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.0/5.0 MB\u001b[0m \u001b[31m26.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from torch-sparse) (1.11.4)\n",
-            "Requirement already satisfied: numpy<1.28.0,>=1.21.6 in /usr/local/lib/python3.10/dist-packages (from scipy->torch-sparse) (1.25.2)\n",
-            "Installing collected packages: torch-sparse\n",
-            "Successfully installed torch-sparse-0.6.18+pt22cu121\n",
-            "Collecting torch-geometric\n",
-            "  Downloading torch_geometric-2.5.3-py3-none-any.whl (1.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m8.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (4.66.2)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (1.25.2)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (1.11.4)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (2023.6.0)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (3.1.3)\n",
-            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (3.9.5)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (2.31.0)\n",
-            "Requirement already satisfied: pyparsing in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (3.1.2)\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (1.2.2)\n",
-            "Requirement already satisfied: psutil>=5.8.0 in /usr/local/lib/python3.10/dist-packages (from torch-geometric) (5.9.5)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.10/dist-packages (from aiohttp->torch-geometric) (1.3.1)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->torch-geometric) (23.2.0)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from aiohttp->torch-geometric) (1.4.1)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp->torch-geometric) (6.0.5)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->torch-geometric) (1.9.4)\n",
-            "Requirement already satisfied: async-timeout<5.0,>=4.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->torch-geometric) (4.0.3)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch-geometric) (2.1.5)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->torch-geometric) (3.3.2)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->torch-geometric) (3.7)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->torch-geometric) (2.0.7)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->torch-geometric) (2024.2.2)\n",
-            "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from scikit-learn->torch-geometric) (1.4.0)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn->torch-geometric) (3.4.0)\n",
-            "Installing collected packages: torch-geometric\n",
-            "Successfully installed torch-geometric-2.5.3\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for deepsnap (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PRfgbfTjCRD_",
-        "outputId": "1f13248a-55cd-4b33-99ff-bf0a1439d00c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        }
+        "id": "PRfgbfTjCRD_"
       },
       "source": [
         "import torch_geometric\n",
         "torch_geometric.__version__"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'2.5.3'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -294,7 +220,7 @@
         "    def loss(self, pred, label):\n",
         "        return F.nll_loss(pred, label)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -415,8 +341,8 @@
         "        self.out_channels = out_channels\n",
         "        self.normalize = normalize\n",
         "\n",
-        "        self.lin_l = None\n",
-        "        self.lin_r = None\n",
+        "        self.lin_l = nn.Linear(in_channels, out_channels, bias=bias)\n",
+        "        self.lin_r = nn.Linear(in_channels, out_channels, bias=bias)\n",
         "\n",
         "        ############################################################################\n",
         "        # TODO: Your code here!\n",
@@ -461,7 +387,7 @@
         "\n",
         "    def message(self, x_j):\n",
         "\n",
-        "        out = None\n",
+        "\n",
         "\n",
         "        ############################################################################\n",
         "        # TODO: Your code here!\n",
@@ -470,6 +396,8 @@
         "        # what message each neighboring node passes.\n",
         "        #\n",
         "        # Our implementation is ~1 lines, but don't worry if you deviate from this.\n",
+        "\n",
+        "        out = x_j\n",
         "\n",
         "        ############################################################################\n",
         "\n",
