Se creó con Colab

--- a/CS224W_Colab3_2023.ipynb
+++ b/CS224W_Colab3_2023.ipynb
@@ -365,7 +365,6 @@
         "    def forward(self, x, edge_index, size = None):\n",
         "        \"\"\"\"\"\"\n",
         "\n",
-        "        out = None\n",
         "\n",
         "        ############################################################################\n",
         "        # TODO: Your code here!\n",
@@ -380,6 +379,10 @@
         "        #    torch.nn.functional)\n",
         "        #\n",
         "        # Our implementation is ~5 lines, but don't worry if you deviate from this.\n",
+        "\n",
+        "        out = self.propagate(edge_index=edge_index, x=(x,x), size=size)\n",
+        "        out = x + out\n",
+        "        out = torch.nn.functional.normalize(out)\n",
         "\n",
         "        ############################################################################\n",
         "\n",
